<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">
    <ImageView
        android:elevation="16dp"
        android:background="@color/colorRed"
        android:layout_marginTop="10dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:id="@+id/logo"
        android:src="@drawable/manutdlogo"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_gravity="center"/>
    <ImageView
        android:elevation="16dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:background="@color/colorRed"
        android:id="@+id/headerImage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:src="@drawable/edited" />
    <TextView
        android:id="@+id/businessName"
        android:layout_marginTop="10dp"
        android:textStyle="bold"
        android:text="@string/name"
        android:textSize="20sp"
        android:layout_gravity="center"
        android:textAllCaps="true"
        android:textColor="@color/colorRed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="20dp">
        <LinearLayout
            android:id="@+id/address"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:elevation="16dp"
                android:src="@drawable/ic_location_city_black_48dp"
                android:id="@+id/addressIcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:layout_marginStart="20dp"
                android:paddingTop="10dp"
                android:textSize="20sp"
                android:textColor="@color/colorRed"
                android:textStyle="bold"
                android:text="@string/location"
                android:id="@+id/addressDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <LinearLayout
            android:layout_marginTop="10dp"
            android:layout_below="@id/address"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:elevation="16dp"
                android:src="@drawable/ic_web_black_48dp"
                android:id="@+id/websiteIcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:layout_marginStart="20dp"
                android:paddingTop="10dp"
                android:textSize="20sp"
                android:textColor="@color/colorRed"
                android:textStyle="bold"
                android:text="@string/manutd"
                android:id="@+id/websiteDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </RelativeLayout>
        <TextView
            android:layout_marginTop="10dp"
            android:layout_marginStart="5dp"
            android:drawableEnd="@drawable/ic_mood_bad_black_24dp"
            android:textSize="20sp"
            android:textColor="@color/colorRed"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nickname"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="10dp"
        android:textSize="15sp"
        android:textColor="@color/colorRed"
        android:textStyle="bold"
        android:text="@string/about"/>
</LinearLayout>
